2009-08-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.75

2009-08-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#127962 [AF Checked] [S3 proposal] [Erik no S3] Incoming chat
		  notification NOT shown in potrait mode in a scenario 

	Then show them with a new nice transition.

	* src/home/hd-render-manager.h (STATE_DISCARD_PREVIEW_NOTE):
	  Don't discard notif previews in APP_PORTRAIT state.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait_ignoring):
	  Assume portrait-capability of notif previews.
	* src/util/hd-transition.c (on_notification_timeline_new_frame):
	  New transition for notif previews in portrait.

2009-08-06  Gordon Williams <gordon.williams@collabora.co.uk>

	Release 2.2.74

	Fixes: NB#128009 - Opening a new message takes two minutes during 
	                   yuotube playback
	* src/home/hd-render-manager.c: Increase delay to 1000ms from 250ms,
	  because dbus is often so amazingly slow that the 'window open' 
	  message arrives over 250ms after the window that was supposed to
	  be opening has appeared.

	* src/mb/hd-animation-actor.c: Made some debug prints that spam syslog
	during image viewer #defined.

2009-08-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.73

2009-08-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#128667 [AF Checked] No "window close" sound when >= 2 windows open

	* src/home/hd-task-navigator.c (turnoff_effect):
	  Play the window-closed sound at the beginning of the effect.
	* src/util/hd-transition.c (hd_transition_close_app_before_rotate):
	  Same for the case when a portrait app is closed.
	* src/util/hd-transition.h (HDCM_WINDOW_OPENED_SOUND,
	  HDCM_WINDOW_CLOSED_SOUND):
	  Added #define:s for the sound file paths.
	* src/launcher/hd-launcher.c (hd_launcher_transition_app_start):
	  Use them.

	Enjoy the hundreds of milliseconds delays.

2009-08-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#130530 Still in task switch view after closing camera lens cover
