@@ -1,6 +1,8 @@
 hildon-desktop (1:2.2.76-1~unreleased) unstable; urgency=low
 
-  * foo
+  Jan Arne:
+  * Fixes: NB#117646 - hildon-desktop rewrites applet related GConf keys
+    during bootup
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri,  7 Aug 2009 12:35:35 +0300
 
